PyCParser.py
# Generated from PyC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PyCParser ( Parser ):

    grammarFileName = "PyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'string'", "'='", "';'", "'if'", 
                     "':'", "'else:'", "'while'", "'for'", "'in'", "'['", 
                     "','", "']'", "'{'", "'}'", "'func'", "'('", "')'", 
                     "'array'", "'malloc'", "'free'", "'return'", "'*'", 
                     "'/'", "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUMBER", "STRING", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_declaration = 2
    RULE_assignment = 3
    RULE_ifStatement = 4
    RULE_loop = 5
    RULE_block = 6
    RULE_funcDeclaration = 7
    RULE_funcCall = 8
    RULE_arrayDeclaration = 9
    RULE_memControl = 10
    RULE_returnStatement = 11
    RULE_expr = 12
    RULE_funcCallExpr = 13
    RULE_arrayAccess = 14
    RULE_type = 15

    ruleNames =  [ "program", "statement", "declaration", "assignment", 
                   "ifStatement", "loop", "block", "funcDeclaration", "funcCall", 
                   "arrayDeclaration", "memControl", "returnStatement", 
                   "expr", "funcCallExpr", "arrayAccess", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    ID=33
    NUMBER=34
    STRING=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.StatementContext)
            else:
                return self.getTypedRuleContext(PyCParser.StatementContext,i)


        def getRuleIndex(self):
            return PyCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.statement()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8597865254) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(PyCParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(PyCParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PyCParser.IfStatementContext,0)


        def loop(self):
            return self.getTypedRuleContext(PyCParser.LoopContext,0)


        def funcDeclaration(self):
            return self.getTypedRuleContext(PyCParser.FuncDeclarationContext,0)


        def funcCall(self):
            return self.getTypedRuleContext(PyCParser.FuncCallContext,0)


        def arrayDeclaration(self):
            return self.getTypedRuleContext(PyCParser.ArrayDeclarationContext,0)


        def memControl(self):
            return self.getTypedRuleContext(PyCParser.MemControlContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(PyCParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return PyCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PyCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 40
                self.loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.funcDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 42
                self.funcCall()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 43
                self.arrayDeclaration()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 44
                self.memControl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 45
                self.returnStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PyCParser.ExprContext,0)


        def getRuleIndex(self):
            return PyCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = PyCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 49
            self.match(PyCParser.ID)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 50
                self.match(PyCParser.T__2)
                self.state = 51
                self.expr(0)


            self.state = 54
            self.match(PyCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PyCParser.ExprContext,0)


        def getRuleIndex(self):
            return PyCParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = PyCParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(PyCParser.ID)
            self.state = 57
            self.match(PyCParser.T__2)
            self.state = 58
            self.expr(0)
            self.state = 59
            self.match(PyCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PyCParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.BlockContext)
            else:
                return self.getTypedRuleContext(PyCParser.BlockContext,i)


        def getRuleIndex(self):
            return PyCParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = PyCParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(PyCParser.T__4)
            self.state = 62
            self.expr(0)
            self.state = 63
            self.match(PyCParser.T__5)
            self.state = 64
            self.block()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 65
                self.match(PyCParser.T__6)
                self.state = 66
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(PyCParser.ExprContext,i)


        def block(self):
            return self.getTypedRuleContext(PyCParser.BlockContext,0)


        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def getRuleIndex(self):
            return PyCParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)




    def loop(self):

        localctx = PyCParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(PyCParser.T__7)
                self.state = 70
                self.expr(0)
                self.state = 71
                self.match(PyCParser.T__5)
                self.state = 72
                self.block()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(PyCParser.T__8)
                self.state = 75
                self.match(PyCParser.ID)
                self.state = 76
                self.match(PyCParser.T__9)
                self.state = 77
                self.match(PyCParser.T__10)
                self.state = 78
                self.expr(0)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 79
                    self.match(PyCParser.T__11)
                    self.state = 80
                    self.expr(0)
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                self.match(PyCParser.T__12)
                self.state = 87
                self.match(PyCParser.T__5)
                self.state = 88
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.StatementContext)
            else:
                return self.getTypedRuleContext(PyCParser.StatementContext,i)


        def getRuleIndex(self):
            return PyCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = PyCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PyCParser.T__13)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8597865254) != 0):
                self.state = 93
                self.statement()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(PyCParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.TypeContext)
            else:
                return self.getTypedRuleContext(PyCParser.TypeContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PyCParser.ID)
            else:
                return self.getToken(PyCParser.ID, i)

        def block(self):
            return self.getTypedRuleContext(PyCParser.BlockContext,0)


        def getRuleIndex(self):
            return PyCParser.RULE_funcDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDeclaration" ):
                listener.enterFuncDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDeclaration" ):
                listener.exitFuncDeclaration(self)




    def funcDeclaration(self):

        localctx = PyCParser.FuncDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(PyCParser.T__15)
            self.state = 102
            self.type_()
            self.state = 103
            self.match(PyCParser.ID)
            self.state = 104
            self.match(PyCParser.T__16)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1 or _la==2:
                self.state = 105
                self.type_()
                self.state = 106
                self.match(PyCParser.ID)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 107
                    self.match(PyCParser.T__11)
                    self.state = 108
                    self.type_()
                    self.state = 109
                    self.match(PyCParser.ID)
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 118
            self.match(PyCParser.T__17)
            self.state = 119
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(PyCParser.ExprContext,i)


        def getRuleIndex(self):
            return PyCParser.RULE_funcCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)




    def funcCall(self):

        localctx = PyCParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(PyCParser.ID)
            self.state = 122
            self.match(PyCParser.T__16)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 60129542144) != 0):
                self.state = 123
                self.expr(0)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 124
                    self.match(PyCParser.T__11)
                    self.state = 125
                    self.expr(0)
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 133
            self.match(PyCParser.T__17)
            self.state = 134
            self.match(PyCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PyCParser.ExprContext,0)


        def getRuleIndex(self):
            return PyCParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)




    def arrayDeclaration(self):

        localctx = PyCParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(PyCParser.T__18)
            self.state = 137
            self.type_()
            self.state = 138
            self.match(PyCParser.ID)
            self.state = 139
            self.match(PyCParser.T__10)
            self.state = 140
            self.expr(0)
            self.state = 141
            self.match(PyCParser.T__12)
            self.state = 142
            self.match(PyCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PyCParser.ExprContext,0)


        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def getRuleIndex(self):
            return PyCParser.RULE_memControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemControl" ):
                listener.enterMemControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemControl" ):
                listener.exitMemControl(self)




    def memControl(self):

        localctx = PyCParser.MemControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_memControl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.state = 144
                self.match(PyCParser.T__19)
                self.state = 145
                self.match(PyCParser.T__16)
                self.state = 146
                self.expr(0)
                self.state = 147
                self.match(PyCParser.T__17)
                pass
            elif token in [21]:
                self.state = 149
                self.match(PyCParser.T__20)
                self.state = 150
                self.match(PyCParser.T__16)
                self.state = 151
                self.match(PyCParser.ID)
                self.state = 152
                self.match(PyCParser.T__17)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 155
            self.match(PyCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PyCParser.ExprContext,0)


        def getRuleIndex(self):
            return PyCParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = PyCParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(PyCParser.T__21)
            self.state = 158
            self.expr(0)
            self.state = 159
            self.match(PyCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcCallExpr(self):
            return self.getTypedRuleContext(PyCParser.FuncCallExprContext,0)


        def arrayAccess(self):
            return self.getTypedRuleContext(PyCParser.ArrayAccessContext,0)


        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def NUMBER(self):
            return self.getToken(PyCParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(PyCParser.STRING, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(PyCParser.ExprContext,i)


        def getRuleIndex(self):
            return PyCParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PyCParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 162
                self.funcCallExpr()
                pass

            elif la_ == 2:
                self.state = 163
                self.arrayAccess()
                pass

            elif la_ == 3:
                self.state = 164
                self.match(PyCParser.ID)
                pass

            elif la_ == 4:
                self.state = 165
                self.match(PyCParser.NUMBER)
                pass

            elif la_ == 5:
                self.state = 166
                self.match(PyCParser.STRING)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 175
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = PyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 169
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 170
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 125829120) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 171
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = PyCParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 172
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 173
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8455716864) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 174
                        self.expr(7)
                        pass

             
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FuncCallExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PyCParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(PyCParser.ExprContext,i)


        def getRuleIndex(self):
            return PyCParser.RULE_funcCallExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCallExpr" ):
                listener.enterFuncCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCallExpr" ):
                listener.exitFuncCallExpr(self)




    def funcCallExpr(self):
